--- a/.github/workflows/sync_and_merge.yml
+++ b/.github/workflows/sync_and_merge.yml
@@ -24,6 +24,7 @@ jobs:
           git fetch upstream
           git checkout main
           git merge upstream/main -X theirs --allow-unrelated-histories || true
+          git log -p HEAD^ HEAD
           if [ -n "$(git status --porcelain)" ]; then
             git add .
             git commit -m "Auto-merged with upstream/main using theirs strategy"
