--- a/.github/workflows/sync_and_merge.yml
+++ b/.github/workflows/sync_and_merge.yml
@@ -20,11 +20,10 @@ jobs:
 
       - name: Add upstream repository
         run: |
-          git remote add upstream https://github.com/suxuang/myIPTV
+          git remote add upstream https://github.com/suxuang/myIPTV.git
           git fetch upstream
           git checkout main
           git merge upstream/main -X theirs --allow-unrelated-histories || true
-          git log -p HEAD^ HEAD
           if [ -n "$(git status --porcelain)" ]; then
             git add .
             git commit -m "Auto-merged with upstream/main using theirs strategy"
