--- a/.github/workflows/sync_and_merge.yml
+++ b/.github/workflows/sync_and_merge.yml
@@ -24,13 +24,15 @@ jobs:
           git fetch upstream
           git checkout main
           git merge upstream/main -X theirs --allow-unrelated-histories || true
-          git add .
-          if [ -n "$(git diff-index HEAD)" ]; then
+          if [ -n "$(git status --porcelain)" ]; then
+            git add .
             git commit -m "Auto-merged with upstream/main using theirs strategy"
           fi
           
       - name: Commit and push changes
         run: |
+          echo "This is a new line added manually" > README2.md
+          git add README.md
           if [ -n "$(git status --porcelain)" ]; then
             git add .
             git commit -m "push"
